-feature: Add support for the 'total_peak', 'all_max_current', and 'all_max_peak'
95th percentile types.
-bug: Corrected user form edit array problem that didn't show the graph options for an edited user
-feature#0000236: graph settings image link still show up even if user does not have rights
-feature# 0000163: Link to login as guest

0.8.6
-bug#0000118: Data source screen UI enhancements (0.8.5).
-bug#0000051: HTTP header caching problems (0.8.5).
-bug#0000120: Deleting a tree header should delete all child items (0.8.4).
-bug#0000121: It is no longer possible to add the same graph twice to a single
graph tree branch.
-bug#0000123: Several UI fixes on the tree item edit page (0.8.5).
-bug#0000124: Select all check boxes would actually invert the selection.
-bug#0000125: A forced sort type can be specified for data query indexes which
will be used to sort data query results in the UI.
-bug#0000128: Graph template item corruption issues (0.8.5a).
-bug#0000139: Graph tree deletion corruption issue (0.8.5a).
-bug#0000140: Replaced the 'None' option in several host drop downs with 'Any'
and redefined 'None' to mean host = 0 (0.8.5a).
-bug#0000144: Possible corruption issues when deleting tree items from the root
of the tree.
-bug#0000149: Error using the 'total' type for 95th percentile or bandwidth
summation.
-bug#0000151: Added the ability to duplicate a host template.
-bug#0000152: Added filter/search/pagination capabilities to the Devices page.
-bug#0000155: Allow hosts on the graph tree to be grouped by data query index (ie.
switch port, partition, etc) instead of only graph template.
-bug#0000156: Added the ability to sort a graph tree branch alphabetically or
numerically.
-bug#0000160: A change in Mozilla 1.5+ caused extra vertical space to appear on
many table rows throughout the console.
-bug#0000161: Removing a graph now gives the user the option to remove all
associated data sources.