@@ -1421,6 +1421,14 @@ CREATE TABLE graph_templates_graph (
   height mediumint(8) NOT NULL default '0',
   t_width char(2) default '0',
   width mediumint(8) NOT NULL default '0',
+  t_x_grid varchar(50) default '0',
+  x_grid varchar(50) default NULL,
+  t_y_grid varchar(50) default '0',
+  y_grid varchar(50) default NULL,
+  t_y_grid_alt char(2) default '0',
+  y_grid_alt char(2) default NULL,
+  t_no_minor char(2) default '0',
+  no_minor char(2) default NULL,
   t_upper_limit char(2) default '0',
   upper_limit bigint(12) NOT NULL default '0',
   t_lower_limit char(2) default '0',
@@ -1445,6 +1453,8 @@ CREATE TABLE graph_templates_graph (
   export char(2) default NULL,
   t_unit_value char(2) default '0',
   unit_value varchar(20) default NULL,
+  t_unit_length smallint(5) default '0',
+  unit_length smallint(5) default NULL,
   t_unit_exponent_value char(2) default '0',
   unit_exponent_value varchar(5) NOT NULL default '',
   PRIMARY KEY  (id),
